@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/IO-Socket-SSL
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Socket-SSL/ChangeLog,v 1.147 2011/04/03 06:21:54 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Socket-SSL/ChangeLog,v 1.148 2011/05/02 18:38:54 tove Exp $
+
+*IO-Socket-SSL-1.400.0 (02 May 2011)
+
+  02 May 2011; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.400.0.ebuild:
+  Version bump
 
   03 Apr 2011; Torsten Veller <tove@gentoo.org> -IO-Socket-SSL-1.370.ebuild,
   -IO-Socket-SSL-1.380.ebuild:
